--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.7",
+    "firebase": "^11.0.2",
     "framer-motion": "^11.11.17",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
